--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -18,7 +18,13 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="app-product-list">Product List</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="app-user-add">User Add</a>
+          </li>
           <li class="nav-item dropdown">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" routerLink="app-user-list">User List</a>
+            </li>
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Link
             </a>
@@ -28,7 +34,7 @@
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
-          </li>
+         
          
         </ul>
         <form class="d-flex" role="search">
