--- a/src/app/pages/users/user-list/user-list.component.html
+++ b/src/app/pages/users/user-list/user-list.component.html
@@ -1,1 +1,16 @@
-<p>user-list works!</p>
+<table *ngFor="let item of userList" class="table">
+    <thead>
+      <tr>
+        <th scope="col"></th>
+        <td>Mark</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+    </tbody>
+  </table>
