--- a/src/app/pages/users/user-add/user-add.component.html
+++ b/src/app/pages/users/user-add/user-add.component.html
@@ -1,4 +1,4 @@
-<form [FormGroup]="userAddForm">
+<form [formGroup]="userAddForm" >
     <div class="mb-3">
       <label for="userName" class="form-label">user Name</label>
       <input
