--- a/src/app/pages/users/user-list/user-list.component.html
+++ b/src/app/pages/users/user-list/user-list.component.html
@@ -1,16 +1,17 @@
-<table *ngFor="let item of userList" class="table">
+<table  class="table">
     <thead>
       <tr>
-        <th scope="col"></th>
-        <td>Mark</td>
+        <th scope="col">User Name</th>
+        <th scope="col">User Mail</th>
+        <th scope="col">User Password</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
+      <tr *ngFor="let item of userList">
+        
+        <td>{{}}</td>
+        <td></td> 
+        <td></td>
       </tr>
     </tbody>
   </table>
