--- a/src/app/pages/users/user-list/user-list.component.html
+++ b/src/app/pages/users/user-list/user-list.component.html
@@ -7,11 +7,10 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of userList">
-        
-        <td>{{}}</td>
-        <td></td> 
-        <td></td>
+      <tr *ngFor="let user of userList"> 
+        <td>{{user.userName}}</td>
+        <td>{{user.userMail}}</td> 
+        <td>{{user.userPassword}}</td>
       </tr>
     </tbody>
   </table>
