--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -16,6 +16,10 @@
             <a class="nav-link active" aria-current="page" routerLink="app-category-add">category Add</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="app-category-list">Category List</a>
+          </li>
+          
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="app-product-list">Product List</a>
           </li>
           <li class="nav-item">
@@ -25,6 +29,7 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" routerLink="app-user-list">User List</a>
             </li>
+            
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Link
             </a>
