--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<app-nav-bar></app-nav-bar>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="container">
+    <app-nav-bar></app-nav-bar>
+  <div class="row">
+  <div class="col-md-3">
+   <app-category-list></app-category-list>
+  </div>
+  <div class="col-md-9">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+  <app-footer></app-footer>
+</div>
