--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,11 @@
   <div class="col-md-3">
    <app-category-list></app-category-list>
   </div>
-  <div class="col-md-9">
-    <router-outlet></router-outlet>
+  <div class="col-md-9 ">
+    <div class="container">
+      <router-outlet></router-outlet>
+    </div>
+    
   </div>
 </div>
   <app-footer></app-footer>
